# kmp-lib

./: CMakeLists.txt
include/: CMakeLists.txt  SourcesLib.cmake
include/kmp/: kamouctrl.hh  kamoulist.hh  kamounum.hh  kamoutil.hh  kamoutree.hh
tests/: CMakeLists.txt  SourcesLib.cmake  test_kamouctrl.cc  test_kamoulist.cc  test_kamounum.cc  test_kamoutil.cc  test_main.cc
